--- a/DailyPlanner/DailyPlannerV2/Auth/Login.html
+++ b/DailyPlanner/DailyPlannerV2/Auth/Login.html
@@ -1,37 +1,45 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <meta charset="utf-8" />
     <title>Login</title>
 </head>
-<body>
-    <form id="login" action="Register.html">
-        <div class="form-control">
-            <label for="userName">UserName</label>
-            <input ref="userName" name="userName" type="text" />
-        </div>
-        <div class="form-control">
-            <label for="userPassword">Password</label>
-            <input ref="userPassword" name="password" type="text" />
-        </div>
-        <a href="Register.html">Register</a>
-        <div>
-            <button onclick="formSubmit()">Login</button>
-        </div>
-    </form>
-</body>
+    <body>
+        <form id="login">
+            <div class="form-control">
+                <label for="userName">UserName</label>
+                <input ref="userName" name="userName" type="text" />
+            </div>
+            <div class="form-control">
+                <label for="userPassword">Password</label>
+                <input ref="userPassword" name="password" type="text" />
+            </div>
+            <a href="Register.html">Register</a>
+            <div>
+                <button onclick="formSubmit()">Login</button>
+            </div>
+        </form>
+    </body>
 </html>
 
 <script>
     function formSubmit() {
         const form = document.getElementById('login');
+        const userName = document.getElementsByName('userName');
+        const password = document.getElementsByName('password');
         form.addEventListener('submit', (event) => {
             event.preventDefault();
-            console.log("here");
-            form.submit();
-            // Perform validation and processing here
+
+            $.post('http://localhost:42264/Auth/Login',
+            {
+                Username: userName[0].value.toString(),
+                UserPassword: password[0].value.toString()
+            },
+            function (data, status) {
+                console.log(status);
+            });
         });
-        console.log("here2");
     }
 </script>
 
