--- a/DailyPlanner/DailyPlannerV2/Auth/Register.html
+++ b/DailyPlanner/DailyPlannerV2/Auth/Register.html
@@ -1,11 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <meta charset="utf-8" />
     <title></title>
 </head>
 <body>
-    <form @submit.prevent="formSubmit()">
+    <form id="register">
         <div class="form-control">
             <label for="user-name">UserName</label>
             <input ref="userName" name="user-name" type="text" />
@@ -31,14 +32,39 @@
             <input ref="email" name="email" type="text" />
         </div>
         <div>
-            <button>Register</button>
+            <button onclick="formSubmit()">Register</button>
         </div>
     </form>
 </body>
 </html>
 
 <script>
+    function formSubmit() {
+        const form = document.getElementById('register');
+        const userName = document.getElementsByName('user-name');
+        const password = document.getElementsByName('password');
+        const firstName = document.getElementsByName('firstName');
+        const lastName = document.getElementsByName('lastName');
+        const phoneNumber = document.getElementsByName('phoneNumber');
+        const email = document.getElementsByName('email');
 
+        form.addEventListener('submit', (event) => {
+            event.preventDefault();
+
+            $.post('http://localhost:42264/Auth/Register',
+                {
+                    FirstName: firstName[0].value,
+                    LastName: lastName[0].value,
+                    PhoneNumber: phoneNumber[0].value,
+                    Email: email[0].value,
+                    UserName: userName[0].value,
+                    UserPassword: password[0].value
+                },
+                function (data, status) {
+                    console.log(status);
+                });
+        });
+    }
 </script>
 
 <style>
